# cmake-external-demo

./: CMakeLists.txt  README.md
demo/: CMakeLists.txt  main.cpp
